			- pTemplate: Added a set of events (see the iMSCP_pTemplate_Events class)
		Javascript
			- Integrated jQuery DataTables plugin (v.1.8.2)
			- Updated jQuery to version 1.7.1
			- Updated jQuery UI to version 1.8.16 (minified version)
			- Rewritten iMSCP jQuery tooltip plugin
		Tools:
			- Updated PhpMyAdmin to version 3.4.9

Tickets:
	- Fixed #228: Enhancement - Multiple HTTPS domains on same IP + wildcard SSL
	- Fixed #242: Security Faillure - Directories are created with group write permissions
	- Fixed #244: Bug - admin/domain_edit.php can cause several issues and must be rewritten
	- Fixed #245: Defect - rkhunter log file is not created
	- Fixed #246: Defect - Traffic accounting seem to be broken
	- Fixed #248: Defect - Bind Slave Mode
	- Fixed #250: Defect - Wrong units in system tools overview
	- Fixed #251: Defect - OldConfig uninitialised on fresh install
	- Fixed #253: Defect - When domain backups are disable there should not be warning emails
	- Fixed #255: Defect - Hide support feature menu item at user level
	- Fixed #257: Defect - Uninstall error
	- Fixed #259: Cosmetics - Different style for input and select elements
	- Fixed #260: Cosmetics - Move app installer menu items to different section
	- Fixed #262: Defect - AWStats not included in apache logrotate config
	- Fixed #263: Defect - Unable to delete htusers && htgroups
	- Fixed #264: Defect - PHP Editor not available
	- Fixed #265: Defect - Disabled feature can not be enabled
	- Fixed #267: Defect - mod_cband configurations are not removed
	- Fixed #269: Defect - Reseller can´t edit php.ini settings for costumer
	- Fixed #270: Defect - Users Can´t acces domain overview
	- Fixed #271: Enhancement - Do not enforce session reuse for FTP over SSL (Tx Cube)
	- Fixed #272: Task - Update postfix's master.cf
	- Fixed #275: Defect - Service status always down when using ipv6 as base ip
	- Fixed #276: Defect - proftpd can´t resolv hostname when using ipv6 as base ip